[metadata]
name = rest-server
version = 0.0.1
author = Chopik
author_email = ch0p1k3@yandex.ru
description = rest-server
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
install_requires =
    borb
    click
    fastapi
    pathlib
    pika
    python-multipart
    sqlalchemy==1.4
    uvicorn[standard]
